# podc

./: CMakeLists.txt  README.md  argfile.conf  dockerfile  flake.nix  main.cpp  notes.md  podc  result
commands/: generate_image  shared_vars
example_project/podc/: deps.list
example_project/podc/commands/: build  init
nix_version/: example  flake.nix
